Remove tau & Fix terms naming

--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -80,9 +80,10 @@
 \newunicodechar{₇}{\ensuremath{{}_7}}
 \newunicodechar{ₗ}{\ensuremath{{}_l}}
 \newunicodechar{ᵣ}{\ensuremath{{}_r}}
+\newunicodechar{ᵢ}{\ensuremath{{}_i}}
+\newunicodechar{ₑ}{\ensuremath{{}_e}}
 \newunicodechar{ℓ}{\ensuremath{\mathnormal\ell}}
 \newunicodechar{⊔}{\ensuremath{\mathnormal\sqcup}}
-
 \usepackage{amsthm}
 \theoremstyle{definition}
 \newtheorem{codigo}{Código}
