--- a/paper/code/context.tex
+++ b/paper/code/context.tex
@@ -86,9 +86,9 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{∋}}\AgdaSpace{}%
@@ -104,15 +104,15 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{∋}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
