--- a/paper/code/eval.tex
+++ b/paper/code/eval.tex
@@ -20,7 +20,7 @@
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}∎}}%
 \>[39I]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -31,22 +31,22 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\<%
 \\
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}⇄⟨\AgdaUnderscore{}⟩\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -54,37 +54,37 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{r}\<%
 \\
 %
 \>[4]\AgdaSymbol{→}%
-\>[63I]\AgdaBound{M}\AgdaSpace{}%
+\>[63I]\AgdaBound{r}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \\
 \>[.][@{}l@{}]\<[63I]%
 \>[6]\AgdaComment{------}\<%
 \\
 %
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}↪⟨\AgdaUnderscore{}⟩\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -92,24 +92,24 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-\AgdaBound{M}\<%
+\AgdaBound{r}\<%
 \\
 %
 \>[4]\AgdaSymbol{→}%
-\>[84I]\AgdaBound{M}\AgdaSpace{}%
+\>[84I]\AgdaBound{r}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \\
 \>[.][@{}l@{}]\<[84I]%
 \>[6]\AgdaComment{------}\<%
 \\
 %
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \end{code}
 %</relation>
 
@@ -129,8 +129,8 @@
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -138,15 +138,15 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \\
 %
 \>[4]\AgdaSymbol{→}%
 \>[248I]\AgdaDatatype{Maybe}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Value}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSymbol{)}\<%
+\AgdaBound{t'}\AgdaSymbol{)}\<%
 \\
 \>[.][@{}l@{}]\<[248I]%
 \>[6]\AgdaComment{----------}\<%
@@ -154,7 +154,7 @@
 %
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Steps}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
@@ -165,7 +165,7 @@
 %\>[0][@{}l@{\AgdaIndent{0}}]%
 %\>[2]
 \AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -177,10 +177,10 @@
 %
 \AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Steps}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
@@ -189,38 +189,38 @@
 \AgdaInductiveConstructor{nothing}\<%
 \\
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{gas}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}%
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{⇑L}%
+\AgdaBound{⇑t}%
 \>[31]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∎}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{just}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{closed⇑→Value}\AgdaSpace{}%
-\AgdaBound{⇑L}\AgdaSymbol{))}\<%
+\AgdaBound{⇑t}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{gas}\AgdaSymbol{)}\AgdaSpace{}%
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{L⇄M}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{r}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{t⇄r}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
 \AgdaBound{gas}\<%
 \\
 \>[0]\AgdaSymbol{...}%
@@ -229,42 +229,42 @@
 \AgdaIndentSpace
 \>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSpace{}%
 \AgdaBound{fin}\AgdaSpace{}%
 \>[31]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
-\AgdaBound{L⇄M}\AgdaSpace{}%
+\AgdaBound{t⇄r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{fin}\<%
 \\
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{gas}\AgdaSymbol{)}\AgdaSpace{}%
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{L↪M}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{r}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{t↪r}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
 \AgdaBound{gas}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[18]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSpace{}%
 \AgdaBound{fin}\AgdaSpace{}%
 \>[31]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
-\AgdaBound{L↪M}\AgdaSpace{}%
+\AgdaBound{t↪r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{fin}\<%
 \end{code}
 %</eval>
@@ -286,8 +286,8 @@
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-\AgdaBound{N}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{t'}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -295,14 +295,14 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⇝}}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \\
 %
 \>[4]\AgdaSymbol{→}%
 \>[128I]\AgdaDatatype{Value}\AgdaSpace{}%
-\AgdaBound{N}\<%
+\AgdaBound{t'}\<%
 \\
 \>[.][@{}l@{}]\<[128I]%
 \>[6]\AgdaComment{----------}\<%
@@ -310,7 +310,7 @@
 %
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Steps}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 %
 %
@@ -321,7 +321,7 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}
 
 \AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -329,90 +329,90 @@
 %
 \AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{SN}\AgdaSpace{}%
-\AgdaBound{L}
+\AgdaBound{t}
 
 \AgdaSpace{}\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Steps}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{progress}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}%
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{done}\AgdaSpace{}%
-\AgdaBound{⇑L}%
+\AgdaBound{⇑t}%
 \>[35]\AgdaSymbol{=}%
 \>[38]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{∎}}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{closed⇑→Value}\AgdaSpace{}%
-\AgdaBound{⇑L}\AgdaSymbol{)}\<%
+\AgdaBound{⇑t}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step⇄}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{L⇄M}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{r}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{t⇄r}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
-\AgdaBound{L⇄M}\AgdaSymbol{))}\<%
+\AgdaBound{t⇄r}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[15][@{}l@{\AgdaIndent{0}}]
 \>[16]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSpace{}%
 \AgdaBound{fin}%
 \>[35]\AgdaSymbol{=}%
 \>[38]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇄⟨}}\AgdaSpace{}%
-\AgdaBound{L⇄M}\AgdaSpace{}%
+\AgdaBound{t⇄r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{fin}\<%
 \\
 \>[0]\AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{sn}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \>[15]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{step↪}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{M}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaBound{L↪M}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{r}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{t↪r}\AgdaSpace{}%
 \AgdaKeyword{with}\AgdaSpace{}%
 \AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{M}\AgdaSpace{}%
+\AgdaBound{r}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{f}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
-\AgdaBound{L↪M}\AgdaSymbol{))}\<%
+\AgdaBound{t↪r}\AgdaSymbol{))}\<%
 \\
 \>[0]\AgdaSymbol{...}%
 \>[15][@{}l@{\AgdaIndent{0}}]
 \>[16]\AgdaSymbol{$\mid$}\AgdaSpace{}%
 \AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSpace{}%
 \AgdaBound{fin}%
 \>[35]\AgdaSymbol{=}%
 \>[38]\AgdaInductiveConstructor{steps}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{↪⟨}}\AgdaSpace{}%
-\AgdaBound{L↪M}\AgdaSpace{}%
+\AgdaBound{t↪r}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
-\AgdaBound{M⇝N}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{r⇝t'}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{fin}\<%
 \\
 %
@@ -422,22 +422,22 @@
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{L}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Steps}\AgdaSpace{}%
-\AgdaBound{L}\<%
+\AgdaBound{t}\<%
 \\
 \>[0]\AgdaFunction{eval}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{eval´}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{strong-norm}\AgdaSpace{}%
-\AgdaBound{L}\AgdaSymbol{)}\<%
+\AgdaBound{t}\AgdaSymbol{)}\<%
 \end{code}
 %</eval2>
 
