--- a/paper/code/example.tex
+++ b/paper/code/example.tex
@@ -67,9 +67,9 @@
 \\
 \>[0]\AgdaFunction{fun}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -91,13 +91,13 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -119,13 +119,13 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -148,7 +148,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaFunction{fun}\<%
 \\
@@ -164,7 +164,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaFunction{prod}\<%
 \\
@@ -182,9 +182,9 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaFunction{T₃}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -244,13 +244,13 @@
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaInductiveConstructor{∅}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₀}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -272,15 +272,15 @@
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaInductiveConstructor{∅}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₁}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -320,13 +320,13 @@
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaInductiveConstructor{∅}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₂}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -348,9 +348,9 @@
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaInductiveConstructor{∅}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₃}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -364,9 +364,9 @@
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaInductiveConstructor{∅}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₄}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -406,15 +406,15 @@
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSymbol{)}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₅}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -434,9 +434,9 @@
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₆}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -453,13 +453,13 @@
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+	\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\AgdaSymbol{)}\AgdaSpace{}%
+	\AgdaInductiveConstructor{⊤}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-	\AgdaInductiveConstructor{τ}\<%
+	\AgdaInductiveConstructor{⊤}\<%
 	\\
 	\>[0]\AgdaFunction{M₇}\AgdaSpace{}%
 	\AgdaSymbol{=}\AgdaSpace{}%
@@ -496,7 +496,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaFunction{fun}\<%
 \\
@@ -511,7 +511,7 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaFunction{prod}\<%
 \\
@@ -528,9 +528,9 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaInductiveConstructor{∅}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaFunction{T₃}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -564,17 +564,17 @@
 \begin{code}%
 \>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -593,13 +593,13 @@
 \AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
-\AgdaInductiveConstructor{τ}\<%
+\AgdaInductiveConstructor{⊤}\<%
 \\
 \>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1377,3 +1377,69 @@ _ = ^ π (` (S Z) · N-⋆)
 	\AgdaFunction{SN⋆}\AgdaSymbol{\}}\<%
 \end{code}
 %</sn>
+
+%<*asso-split>
+\begin{code}
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
+\AgdaBound{B}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{asso}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\end{code}	
+%</asso-split>
+
+%<*asso-split2>
+\begin{code}
+\>[0]\AgdaFunction{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
+\AgdaInductiveConstructor{asso}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{π}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaInductiveConstructor{π}\AgdaSpace{}%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
+\\
+\>[0]\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{asso-split}\<%
+\end{code}
+%</asso-split2>
