--- a/paper/code/reduction.tex
+++ b/paper/code/reduction.tex
@@ -18,15 +18,15 @@
 	\>[2]\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
 	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -34,22 +34,22 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}%
-	\>[59I]\AgdaBound{L}\AgdaSpace{}%
+	\>[59I]\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	\>[.][@{}l@{}]\<[59I]%
 	\>[6]\AgdaComment{---------------}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M}\<%
+	\AgdaBound{s}\<%
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
@@ -57,15 +57,15 @@
 	\>[2]\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{V}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
 	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
-	\AgdaBound{M'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
+	\AgdaBound{s'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -73,22 +73,22 @@
 	\\
 	\>[0][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}%
-	\>[87I]\AgdaBound{M}\AgdaSpace{}%
+	\>[87I]\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{M'}\<%
+	\AgdaBound{s'}\<%
 	\\
 	\>[.][@{}l@{}]\<[87I]%
 	\>[6]\AgdaComment{---------------}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M'}\<%
+	\AgdaBound{s'}\<%
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
@@ -96,14 +96,14 @@
 	\>[2]\AgdaInductiveConstructor{β-ƛ}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{V}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -115,13 +115,13 @@
 	\>[0][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSymbol{)}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaFunction{[}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaFunction{]}}\<%
 	\\
 	%
@@ -130,13 +130,13 @@
 	\>[2]\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
-	\AgdaBound{M'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
+	\AgdaBound{r'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -144,9 +144,9 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}%
-	\>[139I]\AgdaBound{M}\AgdaSpace{}%
+	\>[139I]\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{M'}\<%
+	\AgdaBound{r'}\<%
 	\\
 	\>[.][@{}l@{}]\<[139I]%
 	\>[6]\AgdaComment{-------------------------}\<%
@@ -154,15 +154,15 @@
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{M'}\AgdaSpace{}%
+	\AgdaBound{r'}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
 	%
@@ -171,13 +171,13 @@
 	\>[2]\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{V}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N}\AgdaSpace{}%
-	\AgdaBound{N'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
+	\AgdaBound{s'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -185,9 +185,9 @@
 	\\
 	\>[0][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}%
-	\>[169I]\AgdaBound{N}\AgdaSpace{}%
+	\>[169I]\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{N'}\<%
+	\AgdaBound{s'}\<%
 	\\
 	\>[.][@{}l@{}]\<[169I]%
 	\>[6]\AgdaComment{-------------------------}\<%
@@ -195,15 +195,15 @@
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N'}\AgdaSpace{}%
+	\AgdaBound{s'}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
 	%
@@ -212,8 +212,8 @@
 	\>[2]\AgdaInductiveConstructor{ξ-π}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -223,9 +223,9 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}%
-	\>[198I]\AgdaBound{L}\AgdaSpace{}%
+	\>[198I]\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	\>[.][@{}l@{}]\<[198I]%
 	\>[6]\AgdaComment{---------------------}\<%
@@ -235,12 +235,12 @@
 	\AgdaInductiveConstructor{π}\AgdaSpace{}%
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{π}\AgdaSpace{}%
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
@@ -248,12 +248,12 @@
 	\>[2]\AgdaInductiveConstructor{β-π₁}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{V}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{W}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -268,12 +268,12 @@
 	\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
 	\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{W}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{V}\<%
+	\AgdaBound{r}\<%
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
@@ -281,12 +281,12 @@
 	\>[2]\AgdaInductiveConstructor{β-π₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{V}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{W}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -302,12 +302,12 @@
 	\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
 	\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{V}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{W}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{W}\<%
+	\AgdaBound{s}\<%
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
@@ -315,12 +315,8 @@
 	\>[2]\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -333,21 +329,21 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{N'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 	\AgdaBound{iso}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 	\AgdaBound{iso}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaBound{N'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	\>[0]\<%
 	\\
@@ -355,8 +351,8 @@
 	\>[2]\AgdaInductiveConstructor{ζ}%
 	\>[294I]\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -366,15 +362,15 @@
 	\\
 	\>[.][@{}l@{}]\<[294I]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{↪}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 \end{code}
