--- a/paper/code/term.tex
+++ b/paper/code/term.tex
@@ -9,21 +9,23 @@
 \AgdaPrimitive{Set}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \\
-\>[0][@{}l@{\AgdaIndent{0}}]%
 %
+\\[\AgdaEmptyExtraSkip]%
+\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{`\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}}\<%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[3]\AgdaComment{--\ (ax)}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}%
-\>[78I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[79I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{∋}}\AgdaSpace{}%
 \AgdaBound{A}\<%
 \\
-\>[.][@{}l@{}]\<[78I]%
+\>[.][@{}l@{}]\<[79I]%
 \>[6]\AgdaComment{-----}\<%
 \\
 %
@@ -31,8 +33,9 @@
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\<%
-\\[\AgdaEmptyExtraSkip]%
 \\
+%
+\\[\AgdaEmptyExtraSkip]%
 %
 \>[2]\AgdaInductiveConstructor{⋆}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -41,8 +44,10 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaInductiveConstructor{⊤}\<%
+\AgdaInductiveConstructor{⊤}\AgdaSpace{}%
+\>[3]\AgdaComment{--\ (⊤ᵢ)}\<%
 \\
+%
 \\[\AgdaEmptyExtraSkip]%
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{[\AgdaUnderscore{}]≡\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -51,27 +56,39 @@
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\>[3]\AgdaComment{--\ (≡)}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSpace{}%
-\\[\AgdaEmptyExtraSkip]%
+\AgdaBound{B}\<%
 \\
+%
+\>[4]\AgdaSymbol{→}%
+\>[102I]\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\<%
+\\
+\>[.][@{}l@{}]\<[102I]%
+\>[6]\AgdaComment{---------}\<%
+\\
+%
+\>[4]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{B}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
 %
 \>[2]\AgdaOperator{\AgdaInductiveConstructor{ƛ\AgdaUnderscore{}}}%
 \>[6]\AgdaSymbol{:}%
 \>[9]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\<%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[3]\AgdaComment{--\ (→ᵢ)}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}%
@@ -100,7 +117,8 @@
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\<%
+\AgdaBound{B}\AgdaSymbol{\}}%
+\>[3]\AgdaComment{--\ (→ₑ)}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
@@ -133,7 +151,8 @@
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\<%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[3]\AgdaComment{--\ (×ᵢ)}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
@@ -143,11 +162,11 @@
 \\
 %
 \>[4]\AgdaSymbol{→}%
-\>[146I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[147I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{B}\<%
 \\
-\>[.][@{}l@{}]\<[146I]%
+\>[.][@{}l@{}]\<[147I]%
 \>[6]\AgdaComment{-----------}\<%
 \\
 %
@@ -161,14 +180,15 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaInductiveConstructor{π}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[2]\AgdaInductiveConstructor{π}%
+\>[155I]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{\}}\<%
+\AgdaBound{B}\AgdaSymbol{\}}%
+\>[3]\AgdaComment{--\ (×ₑ)}\<%
 \\
-\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[.][@{}l@{}]\<[155I]%
 \>[4]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -188,13 +208,13 @@
 \\
 %
 \>[4]\AgdaSymbol{→}%
-\>[171I]\AgdaBound{Γ}\AgdaSpace{}%
+\>[172I]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
 \AgdaBound{B}\<%
 \\
-\>[.][@{}l@{}]\<[171I]%
+\>[.][@{}l@{}]\<[172I]%
 \>[6]\AgdaComment{-----------}\<%
 \\
 %
