--- a/paper/code/iso_term.tex
+++ b/paper/code/iso_term.tex
@@ -1247,15 +1247,15 @@
 	\>[2]\AgdaInductiveConstructor{ξ-·₁}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
+	\AgdaBound{r'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
 	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -1263,19 +1263,19 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{r'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaBound{r'}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M}\<%
+	\AgdaBound{s}\<%
 	\\
 	%
 	\\[\AgdaEmptyExtraSkip]%
@@ -1283,15 +1283,15 @@
 	\>[2]\AgdaInductiveConstructor{ξ-·₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
 	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
-	\AgdaBound{M'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
+	\AgdaBound{s'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -1299,19 +1299,19 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{M'}\<%
+	\AgdaBound{s'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
-	\AgdaBound{M'}\<%
+	\AgdaBound{s'}\<%
 	\\
 	\>[0]\<%
 	\\
@@ -1319,13 +1319,13 @@
 	\>[2]\AgdaInductiveConstructor{ξ-⟨,⟩₁}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
-	\AgdaBound{M'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
+	\AgdaBound{r'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -1333,22 +1333,22 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{M'}\<%
+	\AgdaBound{r'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{M'}\AgdaSpace{}%
+	\AgdaBound{r'}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
 	%
@@ -1357,13 +1357,13 @@
 	\>[2]\AgdaInductiveConstructor{ξ-⟨,⟩₂}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{M}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{r}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{N}\AgdaSpace{}%
-	\AgdaBound{N'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{s}\AgdaSpace{}%
+	\AgdaBound{s'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -1371,22 +1371,22 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{N'}\<%
+	\AgdaBound{s'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N}\AgdaSpace{}%
+	\AgdaBound{s}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
-	\AgdaBound{M}\AgdaSpace{}%
+	\AgdaBound{r}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{N'}\AgdaSpace{}%
+	\AgdaBound{s'}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{⟩}}\<%
 	\\
 	%
@@ -1395,8 +1395,8 @@
 	\>[2]\AgdaInductiveConstructor{ξ-π}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -1406,21 +1406,21 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaInductiveConstructor{π}\AgdaSpace{}%
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
 	\AgdaInductiveConstructor{π}\AgdaSpace{}%
 	\AgdaBound{C}\AgdaSpace{}%
 	\AgdaSymbol{\{}\AgdaBound{p}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	\>[0]\<%
 	\\
@@ -1428,8 +1428,8 @@
 	\>[2]\AgdaInductiveConstructor{ξ-≡}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
@@ -1442,21 +1442,21 @@
 	\\
 	\>[2][@{}l@{\AgdaIndent{0}}]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 	\AgdaBound{iso}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSymbol{)}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSymbol{)}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
 	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{[}}\AgdaSpace{}%
 	\AgdaBound{iso}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{]≡}}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSymbol{)}\<%
+	\AgdaBound{t'}\AgdaSymbol{)}\<%
 	\\
 	\>[0]\<%
 	\\
@@ -1464,8 +1464,8 @@
 	\>[2]\AgdaInductiveConstructor{ζ}%
 	\>[1269I]\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{L}\AgdaSpace{}%
-	\AgdaBound{L'}\AgdaSpace{}%
+	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+	\AgdaBound{t'}\AgdaSpace{}%
 	\AgdaSymbol{:}\AgdaSpace{}%
 	\AgdaBound{Γ}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
@@ -1475,16 +1475,16 @@
 	\\
 	\>[.][@{}l@{}]\<[1269I]%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 	\\
 	%
 	\>[4]\AgdaSymbol{→}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{L}\AgdaSpace{}%
+	\AgdaBound{t}\AgdaSpace{}%
 	\AgdaOperator{\AgdaDatatype{⇄}}\AgdaSpace{}%
 	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{L'}\<%
+	\AgdaBound{t'}\<%
 \end{code}
 %</relation>
